--- a/style.css
+++ b/style.css
@@ -1,3 +1,28 @@
 body{
     background-color: #7FFFD4;
 }
+
+header{
+    height: 100px;
+    background-color: white;
+    padding: 0 50px;
+}
+
+button{
+    border-radius: 20px;
+    padding: 3px  20px;
+}
+
+.grid{
+    width: 500px;
+    height: 500px;
+    margin: 50px auto;
+    background-color: yellow;
+
+}
+
+.cell{
+    width: calc(100% / 10);
+    height: calc(100% / 10);
+    border: 2px solid black;
+}
