--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
 header{
     height: 100px;
     background-color: white;
-    padding: 0 50px;
+    padding: 0 20px;
 }
 
 button{
@@ -18,6 +18,7 @@ button{
     height: 500px;
     margin: 50px auto;
     background-color: yellow;
+    ;
 
 }
 
@@ -25,4 +26,24 @@ button{
     width: calc(100% / 10);
     height: calc(100% / 10);
     border: 2px solid black;
+}
+.cellMedium{
+    width: calc(100% / 9);
+    height: calc(100% / 9);
+    border: 2px solid black;
+}
+
+.cellHard{
+    width: calc(100% / 7);
+    height: calc(100% / 7);
+    border: 2px solid black;
+}
+
+.bg-blue{
+    background-color: aqua;
+}
+
+img{
+    height: 50px;
+    margin-right: 20px;
 }
